AM_CPPFLAGS = ${libbitcoin_CFLAGS}

bin_PROGRAMS = poller balance mktx priv

poller_SOURCES = poller.cpp
poller_LDADD = ${libbitcoin_LIBS}

balance_SOURCES = balance.cpp
balance_LDADD = ${libbitcoin_LIBS}

mktx_SOURCES = mktx.cpp
mktx_LDADD = ${libbitcoin_LIBS}

priv_SOURCES = priv.cpp
priv_LDADD = ${libbitcoin_LIBS}

